vaultwarden/mariadb-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bitwarden-mariadb
spec:
  selector:
    matchLabels:
      app: bitwarden-mariadb
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 1
      maxSurge: 0
  template:
    metadata:
      labels:
        app: bitwarden-mariadb
    spec:
      volumes:
      - name: bitwarden-mariadb-persistent-storage
        persistentVolumeClaim:
          claimName: bitwarden-mariadb-pv-claim
      - name: bitwarden-mariadb-backup-persistent-storage
        persistentVolumeClaim:
          claimName: bitwarden-mariadb-backup-pv-claim
      containers:
        - name: mariadb
          image: mariadb:10.11.2
          securityContext:
            runAsNonRoot: true
            runAsUser: 82
            allowPrivilegeEscalation: false
            runAsGroup: 999
          ports:
            - name: mariadb
              containerPort: 3306
              protocol: TCP
          volumeMounts:
          - name: bitwarden-mariadb-persistent-storage
            mountPath: /var/lib/mysql
          resources:
            limits:
              cpu: 256m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 64Mi
        - name: mariadb-backup
          image: tiredofit/db-backup:3.9.0
          securityContext:
            #runAsNonRoot: true
            #runAsUser: 82
          resources:
            limits:
              cpu: 200m
              memory: 128Mi
            requests:
              cpu: 100m
              memory: 64Mi
          volumeMounts:
          - name: bitwarden-mariadb-backup-persistent-storage
            mountPath: /backup
