vaultwarden/postgres.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: vaultwarden
---
apiVersion: v1
kind: Service
metadata:
  name: vaultwarden
  namespace: vaultwarden
spec:
  allocateLoadBalancerNodePorts: false
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - name: postgres
    port: 5433
    protocol: TCP
    targetPort: 5432
  selector:
    cnpg.io/cluster: vaultwarden-cnpg-main-pooler-rw
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 192.168.1.10
