vaultwarden/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: bitwarden
  labels:
    app: bitwarden
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: ws
    protocol: TCP
    port: 3012
    targetPort: 3012
  type: ClusterIP
  selector:
    app: bitwarden
---
apiVersion: v1
kind: Service
metadata:
  name: bitwarden-mariadb
  labels:
    app: bitwarden-mariadb
spec:
  ports:
  - name: mariadb
    port: 3306
  selector:
    app: bitwarden-mariadb
